--- a/package.json
+++ b/package.json
@@ -18,23 +18,24 @@
   },
   "dependencies": {
     "@algolia/ui-library": "4.0.0-beta.71",
-    "@docsearch/react": "3.2.1",
-    "@docusaurus/core": "2.1.0",
-    "@docusaurus/preset-classic": "2.1.0",
+    "@docusaurus/core": "2.4.1",
+    "@docusaurus/preset-classic": "2.4.1",
     "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.1.1",
+    "clsx": "^1.2.1",
     "file-loader": "6.2.0",
     "my-loaders": "file:plugins/my-loaders",
     "postcss": "8.4.16",
     "postcss-import": "15.0.0",
     "postcss-preset-env": "7.8.2",
-    "prism-react-renderer": "1.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "prism-react-renderer": "^1.3.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "tailwind-loader": "file:plugins/tailwind-loader",
     "url-loader": "4.1.1"
   },
   "devDependencies": {
+    "@docusaurus/module-type-aliases": "2.4.1",
+    "image-webpack-loader": "^8.1.0",
     "postcss-loader": "6.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tencent-cdn-refresh": "^2.0.0"
